2019-03-14 Philipp Klaus Krause <pkk AT spth.de>

	* Merged pdk branch to trunk.

2019-03-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20000412-2.c,
	  support/regression/tests/gcc-torture-execute-20180112-1.c,
	  support/regression/tests/gcc-torture-execute-920922-1.c,
	  support/regression/tests/gcc-torture-execute-arith-rand.c,
	  support/regression/tests/gcc-torture-execute-ashldi-1.c,
	  support/regression/tests/gcc-torture-execute-divconst-3.c,
	  support/regression/tests/gcc-torture-execute-divmod-1.c,
	  support/regression/tests/gcc-torture-execute-index-1.c,
	  support/regression/tests/gcc-torture-execute-loop-15.c,
	  support/regression/tests/gcc-torture-execute-multdi-1.c,
	  support/regression/tests/gcc-torture-execute-pr39100.c,
	  support/regression/tests/gcc-torture-execute-pr49419.c,
	  support/regression/tests/gcc-torture-execute-pr60454.c,
	  support/regression/tests/gcc-torture-execute-pr61306-1.c,
	  support/regression/tests/gcc-torture-execute-pr61306-2.c,
	  support/regression/tests/gcc-torture-execute-pr64979.c,
	  support/regression/tests/gcc-torture-execute-pr78378.c,
	  support/regression/tests/gcc-torture-execute-pr79121.c,
	  support/regression/tests/onebyte.c,
	  support/regression/tests/gcc-torture-execute-va-arg-1.c,
	  support/regression/tests/gcc-torture-execute-va-arg-12.c,
	  support/regression/tests/gcc-torture-execute-va-arg-15.c,
	  support/regression/tests/gcc-torture-execute-va-arg-16.c,
	  support/regression/tests/gcc-torture-execute-va-arg-18.c,
	  support/regression/tests/gcc-torture-execute-va-arg-26.c,
	  support/regression/tests/gcc-torture-execute-va-arg-5.c,
	  support/regression/tests/gcc-torture-execute-va-arg-6.c,
	  support/regression/tests/gcc-torture-execute-va-arg-9.c,
	  support/regression/tests/gcc-torture-execute-loop-8.c:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).
	* src/pdk/gen.c: